--- a/style.css
+++ b/style.css
@@ -2,15 +2,25 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f3f3f3;
     text-align: center;
+    background-image: url(https://cdn.dribbble.com/users/2399335/screenshots/14689261/d_glass-morphism_card_1080p.png?compress=1&resize=1200x900);
 }
 
 .container {
     background-color: #fff;
-    padding: 20px;
+    padding: 100px;
     border-radius: 5px;
+    width: 1000;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     max-width: 400px;
     margin: 0 auto;
+    /* From https://css.glass */
+background: rgba(255, 255, 255, 0.2);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(5px);
+-webkit-backdrop-filter: blur(5px);
+border: 1px solid rgba(255, 255, 255, 0.3);
+   
 }
 
 h1 {
