--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     background-color: #f3f3f3;
     text-align: center;
     background-image: url(https://cdn.dribbble.com/users/2399335/screenshots/14689261/d_glass-morphism_card_1080p.png?compress=1&resize=1200x900);
+    color: white;
 }
 
 .container {
